# programming_tech_lab_1

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: coverage-report.yml
cmake/: create_test.cmake
file_observer/: CMakeLists.txt  file_observer.hpp  file_watcher_factory.hpp  ifile_watcher.hpp
file_observer/src/: file_observer.cpp  file_watcher_factory.cpp  polling_file_watcher.cpp  polling_file_watcher.hpp
file_observer/test/: file_observer_test.cpp  polling_file_watcher.cpp
logger/: CMakeLists.txt  ilogger.hpp  log_levels.hpp  log_settings.hpp  logger.hpp  logger_factory.hpp  logger_macros.hpp
logger/src/: app_logger.cpp  app_logger.hpp  log_entry_stream.cpp  log_entry_stream.hpp  log_settings.cpp  logger.cpp  logger_factory.cpp  observer_logger.cpp  observer_logger.hpp  thread_safe_logger.cpp  thread_safe_logger.hpp
logger/test/: app_logger_test.cpp  app_sys_logger_test.cpp  log_entry_stream_test.cpp  log_settings_test.cpp  logger_factory_test.cpp  test_utils.hpp  thread_safe_logger_test.cpp
